Update setup instructions
Closes #24