@@ -12,27 +12,34 @@ TL;DR: with this library, you can declaratively and dynamically create UIs with 
 
 This library is still under development, and only pre-release versions are available [on Maven Central](https://central.sonatype.com/artifact/io.github.compose4gtk/compose-4-gtk).
 
-JDK 23 or newer is required.
+JDK 23 or newer and the Kotlin Compose plugin are required.
 
 For example, on your `build.gradle.kts`:
 
 ```kotlin
+plugins {
+    kotlin("jvm")
+    id("org.jetbrains.compose")
+    id("org.jetbrains.kotlin.plugin.compose")
+    application
+}
+
 kotlin {
     jvmToolchain(23)
 }
 
 repositories {
-    ...
     mavenCentral()
-    ...
+    google()
 }
 
-...
-
 dependencies {
-    ...
     implementation("io.github.compose4gtk:compose-4-gtk:<latest-version>")
-    ...
+}
+
+application {
+    mainClass = "org.example.MainKt"
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
 ```
 
